# medical-ml-leakage-guard

./: ._.git  .coverage  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUEUE_PROMPTS.md  README.md  SKILL.md  mypy.ini  pyproject.toml  requirements-optional.txt  requirements.txt  ruff.toml  split_prompts.py
.windsurf/: dev-notes.md
agents/: claude.yaml  gemini.yaml  openai.yaml
docs/: gate-framework-developer-guide.md  gate-scripts-review-summary.md  scripts_deep_review_report.md  security_hardening_skill.md
examples/: .gitignore  download_real_data.py
papers/: .gitignore  README.md
references/: API-Reference.md  Architecture.md  Beginner-Quickstart.md  Troubleshooting-Top20.md  attestation-execution-log-record.example.json  attestation-execution-receipt-record.example.json  attestation-payload.example.json  attestation-timestamp-record.example.json  attestation-transparency-record.example.json  attestation-witness-record.example.json  batch-manifest.example.json  benchmark-registry.json  ci-matrix-report.example.json  error-knowledge-base.json  evaluation-report.example.json  execution-attestation.example.json  external-benchmark-comparison.md  external-cohort-spec.example.json  external-validation-report.example.json  feature-engineering-report.example.json  gate-applicability-matrix.json  imbalance-policy.example.json  interactive-profile.example.json  journal-rigor-standards.json  key-revocations.example.json  leakage-taxonomy.md  literature-knowledge-base.json  medical-disease-leakage.md  missingness-policy.example.json  mlgg-compliance-certificate.schema.json  mlgg-review-standard.json  mlgg-standard-specification.json  performance-policy.example.json  prediction-type-registry.json  probast-ai-signalling-questions.json  release-benchmark-suite.md  report-template.md  (+7 more)
(+175 files in other folders)
